image file into folder

--- a/car.html
+++ b/car.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Car Game</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" />
     <style>
         * {
             margin: 0;
@@ -75,7 +74,7 @@
         .car {
             height: 85px;
             width: 50px;
-            background-image: url('/red-car.webp');
+            background-image: url('./images/red-car.webp');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
@@ -149,19 +148,19 @@
         const ClickToStart = document.querySelector('.ClickToStart');
 
         const opponentImages = [
-            '/opponent1.webp',
-            '/opponent2.webp',
-            '/opponent3.webp',
-            '/opponent4.webp',
-            '/opponent5.webp',
-            '/opponent6.webp',
-            '/opponent7.webp',
-            '/opponent8.webp',
-            '/opponent9.webp',
-            '/opponent10.webp',
-            '/opponent11.webp',
-            '/opponent13.webp',
-            '/opponent14.webp',
+            './images/opponent1.webp',
+            './images/opponent2.webp',
+            './images/opponent3.webp',
+            './images/opponent4.webp',
+            './images/opponent5.webp',
+            './images/opponent6.webp',
+            './images/opponent7.webp',
+            './images/opponent8.webp',
+            './images/opponent9.webp',
+            './images/opponent10.webp',
+            './images/opponent11.webp',
+            './images/opponent13.webp',
+            './images/opponent14.webp',
         ];
 
         ClickToStart.addEventListener('click', Start);
